ubah tombol register login

--- a/LandingPage/landing_page.html
+++ b/LandingPage/landing_page.html
@@ -14,10 +14,8 @@
       </div>
       <p class="welcome-text">welcome to dozy!</p>
       <div class="top-links">
-        <button type="text">
-          <a href="register.html">Register</a>
-        </button>
-        <button><a href="login.html">Login</a></button>
+        <a href="register.html"><button>Register</button></a>
+        <a href="Login/login.html"><button>Login</button></a>
       </div>
     </div>
   </body>
