perbaikan button landing page

--- a/LandingPage/landing_page.html
+++ b/LandingPage/landing_page.html
@@ -15,7 +15,7 @@
       <p class="welcome-text">welcome to dozy!</p>
       <div class="top-links">
         <a href="register.html"><button>Register</button></a>
-        <a href="Login/login.html"><button>Login</button></a>
+        <a href="proyekwebDozy/Login/login.html"><button>Login</button></a>
       </div>
     </div>
   </body>
